--- a/ImmuDbDotnetLib/ImmuDbDotnetLib.csproj
+++ b/ImmuDbDotnetLib/ImmuDbDotnetLib.csproj
@@ -25,5 +25,10 @@
     <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="favorites.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
