--- a/ImmuDbDotnetLib/ImmuDbDotnetLib.csproj
+++ b/ImmuDbDotnetLib/ImmuDbDotnetLib.csproj
@@ -26,6 +26,9 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
   <ItemGroup>
+    <None Update="sample.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="favorites.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
