--- a/ImmuDbDotnetLib/ImmuDbDotnetLib.csproj
+++ b/ImmuDbDotnetLib/ImmuDbDotnetLib.csproj
@@ -14,6 +14,7 @@
     
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="10.3.3" />
     <PackageReference Include="Google.Protobuf" Version="3.18.0" />
     <PackageReference Include="Grpc" Version="2.40.0" />
     <PackageReference Include="Grpc.Tools" Version="2.40.0">
